samples/_failures_safe/1761137188_2e603c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0417e1df.c: In function ‘main’:
./samples/SAFE/__tmp_0417e1df.c:160:53: error: expected ‘)’ at end of input
  160 |         if (strlen(input_buffer) > 0 && input_buffer
      |            ~                                        ^
      |                                                     )
./samples/SAFE/__tmp_0417e1df.c:160:9: error: expected declaration or statement at end of input
  160 |         if (strlen(input_buffer) > 0 && input_buffer
      |         ^~
./samples/SAFE/__tmp_0417e1df.c:160:9: error: expected declaration or statement at end of input
